--- a/users.html
+++ b/users.html
@@ -28,7 +28,7 @@
             <nav>
                 <ul>
                     <div class="pl-2">
-                        <li class="p-2"><a href="./index.html"><span class="ac ac-users"></span>Control de usuarios</a>
+                        <li class="p-2"><a href="./users.html"><span class="ac ac-users"></span>Control de usuarios</a>
                         </li>
                     </div>
                     <div class="pl-2">
@@ -90,7 +90,8 @@
         </div>
     </div>
     <script src="./src/public/js/JQuery/jquery-3.4.1.min.js"></script>
-    <script src="./src/public/js/date.js"></script>
+    <script src="./src/services/firebase.js"></script>
+    <script src="./src/public/js/users.js"></script>
 </body>
 
 </html>
