--- a/assist.html
+++ b/assist.html
@@ -28,7 +28,7 @@
             <nav>
                 <ul>
                     <div class="pl-2">
-                        <li class="p-2"><a href="./index.html"><span class="ac ac-users"></span>Control de usuarios</a>
+                        <li class="p-2"><a href="./users.html"><span class="ac ac-users"></span>Control de usuarios</a>
                         </li>
                     </div>
                     <div class="pl-2">
@@ -91,7 +91,7 @@
                         <div class="col-md-2"></div>
                         <div class="col-md-8">
                             <div class="card border-primary mb-3" style="max-width: 50rem; height: 200px;">
-                                <!-- Aqui va la foto del usuario -->
+                                <img id="myimg" style=" width: 160px; height: 200px;" src="" alt="">
                             </div>
                         </div>
                         <div class="col-md-2"></div>
@@ -101,6 +101,7 @@
         </div>
     </div>
     <script src="./src/public/js/JQuery/jquery-3.4.1.min.js"></script>
+    <script src="./src/services/firebase.js"></script>
     <script src="./src/public/js/assist.js"></script>
 </body>
 
